fix: properly hide partner bar content when collapsed

--- a/res/css/structures/_watcha_PartnerBar.scss
+++ b/res/css/structures/_watcha_PartnerBar.scss
@@ -3,6 +3,7 @@
     padding: 0.8em;
     display: flex;
     align-items: center;
+    overflow: hidden;
     background-color: $accent-color;
 
     span {
